<resources>
    <string name="app_name">해루질러</string>

    <!-- keys -->
    <string name="kma_opemapi_key">IEUdGrjr8gLf11x5UyDgUpeQpgogxGYoPC8ZZfdvFtp+CMgU969WgPaXLOmEaXM/UcYbzZYrb9OBHTz58I4zaA==</string>
    <string name="sea_openapi_key">SpGC4MjwhAPJosLja1g8ApaDhGbk/hWZ2kOV8ZcCNB8ymdluVZNSuQ4hm4X/atHo5/QhX72g8hUMdwAu1Kg==</string>
    <string name="naver_map_key">zZJw_IMQXLr5pnSuxaLQ</string>
    <string name="admob_app_id">ca-app-pub-1908860913688060~5198635806</string>
    <string name="admob_interstitial_id">ca-app-pub-1908860913688060/1917511127</string>
    <string name="admob_banner_id">ca-app-pub-1908860913688060/7455856766</string>

    <string name="no_data_time">--:--</string>
    <string name="no_data_wave">--/--</string>
    <string name="no_data_height">--cm</string>
    <string name="measure_cm">cm</string>
    <string name="measure_temperature">℃</string>

    <!-- detail view -->
    <string name="detail_moon_date">음력</string>
    <string name="detail_weather">날씨</string>
    <string name="detail_temperature">온도</string>
    <string name="detail_wave">파고</string>
    <string name="detail_wind_speed">풍속</string>
    <string name="detail_etc">기타</string>

    <string name="detail_am">오전</string>
    <string name="detail_pm">오후</string>

    <string name="today_tide">오늘의 물때 : %s</string>

    <string name="record_show_map">지도보기</string>
    <string name="record_show">기록보기</string>
    <string name="record_start">기록시작</string>
    <string name="record_stop">기록중지</string>
    <string name="record_time">현시각 : </string>
    <string name="record_address">주소 : </string>
    <string name="no_address_found">해당되는 주소를 찾을 수 없습니다.</string>
    <string name="no_time_found">날짜정보 읽어올 수 없음</string>
    <string name="service_not_available">네트워크 불안정으로 주소를 가져올 수 없습니다.</string>
    <string name="invalid_lat_long_used">GPS 주소를 읽어올 수 없습니다.</string>
    <string name="unable_use_gps">GPS가 꺼져있어 현재위치\n정보를 받을 수 없습니다.\nGPS를 켠 후 다시 시도해주세요.</string>
    <string name="setting">설정</string>
    <string name="korea">대한민국</string>

    <!-- ALARM -->
    <string name="number_picker_hour">시간</string>
    <string name="number_picker_min">분</string>
    <string name="number_picker_selected_values">%1$d시간 %2$d분후 알람실행</string>
    <string name="start_alarm">알람 시작</string>
    <string name="started_alarm">%1$d시간 %2$d분 후에 알람이 울립니다.</string>
    <string name="stop_alarm">알람 종료</string>
    <string name="stopped_alarm">알람이 꺼졌습니다.</string>
    <string name="tv_alarm">알람</string>
    <string name="alarm_notice">간조 알람이예요! 안전한 해루질을 위해\n슬슬 해루질을 마무리 합시다!</string>
    <string name="alarm_list_title">알람 벨소리를 선택하세요</string>
    <string name="alarm_sound">알람 소리</string>
    <string name="alarm_duration">알람지속 시간</string>
    <string name="alarm_base_duration">1 분</string>
    <string name="alarm_base_sound">기본음</string>

    <!-- MENU -->
    <string name="menu_tide_calendar">물때&amp;날씨</string>
    <string name="menu_map">지도&amp;기록</string>
    <string name="menu_kweather">국내예보</string>
    <string name="menu_fweather">해외예보</string>
    <string name="menu_alarm">알림설정</string>
    <string name="menu_tip">해루질팁</string>
    <string name="menu_mail">메일문의</string>
    <string name="menu_share">공유하기</string>

    <!-- WEATHER TITLE -->
    <string name="menu_weather_basic">전국날씨</string>
    <string name="menu_weather_sea">해양날씨</string>
    <string name="weather_height_japan">파고예보</string>
    <string name="weather_measure_japan">강수량예보</string>
    <string name="weather_cloud_japan">비구름예보</string>
    <string name="weather_flow_usa">날씨흐름</string>
    <string name="weather_seaweed_usa">시간별해상</string>

    <!-- TITLE -->
    <string name="title_tip_info">해루질이란?</string>
    <string name="title_tip_tide">물때표보는법</string>
    <string name="title_tip_catch_table">월별조과표</string>

    <!-- TIPS INFO -->
    <string name="tip_info_info">info</string>
    <string name="tip_info_detail">detail</string>
    <string name="tip_info_method">method</string>
    <string name="tip_info_warm">warn</string>

    <string name="tip_catch_history_month">month</string>
    <string name="tip_tide">tide</string>

    <!--    Permissions    -->
    <string name="permission_default_message">지도를 사용하기 위해 위치정보 권한이 필요합니다.\n설정 > 권한 > 위치권한 켜기를 해주세요.</string>

    <!-- Toolbar -->
    <string name="toolbar_detail_map">지도상세</string>
    <string name="toolbar_delete_record">기록삭제</string>

    <string name="no_record_result">기록된 정보가 없습니다.</string>
    <string name="toolbar_title_detail">상세보기</string>

    <!-- Settings -->
    <string name="toolbar_title_settings">기타</string>
    <string name="introduce_developer">해루질러 개발자입니다.\n광고로 때문에 불편하신가요?\n앱 서비스를 운영하는데 필요한 서버비용\n광고비용, 운영비용을 유지하기위해\n불가피하게 광고를 삽입하였습니다\n좋은 리뷰와 광고클릭으로 많은 힘을얻고\n좋은 서비스를 할 수 있습니다.\n양해부탁드립니다. 그리고\n해루질러 앱을 이용해 주셔서 감사합니다.\n앞으로 더 좋은 앱을 만들기 위해 노력하겠습니다.\n불편사항이나 개선점 있으시면 언제든지 메일주세요!</string>
    <string name="update_content">조과물 자랑도하고, 서로서로 내용 공유도\n가능한 게시판을 하나 추가할 예정입니다.\n(회사일이 바빠 4월말쯤 예상)</string>
    <string name="title_help_developer">개발자 도와주기</string>
    <string name="send_email">메일 보내기</string>
    <string name="email_address">developerkhy@gmail.com</string>
    <string name="title_send_mail_to_developer">개발자에게 메일 보내기</string>

</resources>
