<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.TideDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        app:tabGravity="fill"
        app:tabMode="fixed">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="상세보기"
                android:textColor="@color/tide_white"
                android:textSize="20dp"
                android:textStyle="bold" />


        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TableLayout
            android:id="@+id/tide_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>

                <TextView
                    android:id="@+id/lvl1_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="18:00"
                    android:textSize="@dimen/detail_sub_text_size" />

                <ImageView
                    android:id="@+id/lvl1_up_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/graph_up" />

                <TextView
                    android:id="@+id/lvl1_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="700"
                    android:textColor="@color/tide_up"
                    android:textSize="@dimen/detail_sub_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lvl2_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="22:00"
                    android:textSize="@dimen/detail_sub_text_size" />

                <ImageView
                    android:id="@+id/lvl2_down_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/graph_down" />

                <TextView
                    android:id="@+id/lvl2_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="70"
                    android:textColor="@color/tide_down"
                    android:textSize="@dimen/detail_sub_text_size"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lvl3_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="18:00"
                    android:textSize="@dimen/detail_sub_text_size" />

                <ImageView
                    android:id="@+id/lvl3_up_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/graph_up" />

                <TextView
                    android:id="@+id/lvl3_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="700"
                    android:textColor="@color/tide_up"
                    android:textSize="@dimen/detail_sub_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lvl4_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="22:00"
                    android:textSize="@dimen/detail_sub_text_size" />

                <ImageView
                    android:id="@+id/lvl4_down_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/graph_down" />

                <TextView
                    android:id="@+id/lvl4_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="70"
                    android:textColor="@color/tide_down"
                    android:textSize="@dimen/detail_sub_text_size"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/tide_detail_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tide_table">

            <TableRow
                android:background="@color/chart_marker_background"
                android:minHeight="@dimen/detail_title_cell_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_weather"
                    android:textSize="@dimen/detail_title_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_temperature"
                    android:textSize="@dimen/detail_title_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_wave"
                    android:textSize="@dimen/detail_title_text_size"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tv_detail_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/detail_sub_text_size" />

                <TextView
                    android:id="@+id/tv_detail_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/detail_sub_text_size" />

                <TextView
                    android:id="@+id/tv_detail_wave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/detail_sub_text_size" />
            </TableRow>

            <TableRow
                android:background="@color/chart_marker_background"
                android:minHeight="@dimen/detail_title_cell_height">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_moon_date"
                    android:textSize="@dimen/detail_title_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_wind_speed"
                    android:textSize="@dimen/detail_title_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/detail_etc"
                    android:textSize="@dimen/detail_title_text_size"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/tv_detail_date_moon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/detail_sub_text_size" />

                <TextView
                    android:id="@+id/tv_detail_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/detail_sub_text_size" />

                <TextView
                    android:id="@+id/tv_detail_etc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/detail_sub_text_size" />
            </TableRow>
        </TableLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
